# htmx-bot

./: Cargo.toml
src/: main.rs
templates/: base.html  index.html  msg.html  msgs.html
